k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bvrinfra
  labels:
    app.kubernetes.io/part-of: bvrinfra-portfolio
